Tried to fix image stretch for chrome android

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
   font-weight: normal;
   font-style: normal;
 }
+html {
+ height: 100%;
+ min-height: 100%;
+ }
 /* =======================================================
 *
 * 	Template Style 
@@ -21,6 +25,7 @@ body {
   background: #fff;
   height: 100%;
   position: relative;
+  min-height: 100%;
 }
 
 a {
@@ -1144,6 +1149,8 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
   position: relative;
   height: 400px;
+  min-height: 100%;
+  background-attachment:fixed;
 }
 .wedding-events .desc {
   padding: 2em;
